@startuml
title GLIA-V1 High Level Sequence and Class Overview

package "Swarm Layer" {
  class SwarmMissionRunner {
    +runMission(mission)
  }
}

package "SIE Layer" {
  class SIE {
    +execute(context, action)
    +validate(ast)
  }
}

package "Browser Manager" {
  class BrowserManager {
    +createBrowser(pid)
    +createContext(pid, ctxId)
    +createPage(pid, ctxId, pageId)
    +runAction(pid, ctxId, pageId, action)
  }
  class ResourcePool {
    +acquire()
    +release(pid)
  }
}

package "Audit" {
  class AuditLog {
    +push(entry)
    +dump()
  }
}

SwarmMissionRunner --> SIE : generate instruction[]
SIE --> BrowserManager : runAction(...)
BrowserManager --> ResourcePool : acquire/release
BrowserManager --> AuditLog : log(action start/end)
SIE --> AuditLog : log(validation/results)
AuditLog --> SwarmMissionRunner : provide evidence

note right: TOON (JSON) flows from Swarm -> SIE -> Executor

@enduml
